# pds-api

./: .buildinfo  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  MANIFEST.in  NOTICE.txt  README.md  SECURITY.md  acknowlegements.html  general-conventions.html  general_conventions.html  genindex.html  http-routingtable.html  implementations.html  index.html  objects.inv  overview.html  requirements.txt  search-api-user-guide.html  search.html  searchindex.js  setup.cfg  setup.py  specifications.html  support.html  tools.html  tox.ini
.doctrees/: acknowlegements.doctree  environment.pickle  general-conventions.doctree  implementations.doctree  index.doctree  overview.doctree  specifications.doctree  support.doctree  tools.doctree
.doctrees/guides/: search.doctree
.doctrees/guides/search/: cookbook.doctree  endpoints.doctree  links.doctree  quickstart.doctree  response_formats.doctree  responses.doctree  tutorials.doctree
.doctrees/support/: contact.doctree  contribute.doctree  discussions.doctree
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: build-docs.yml  codeql-analysis.yml  release-latest.yml  secrets-detection.yaml  stable-cicd.yaml  unstable-cicd.yaml
_sources/: acknowlegements.rst.txt  general-conventions.rst.txt  general_conventions.rst.txt  implementations.rst.txt  index.rst.txt  overview.rst.txt  search_api_guide.rst.txt  specifications.rst.txt  support.rst.txt  tools.rst.txt
_sources/guides/: search.rst.txt
_sources/guides/search/: cookbook.rst.txt  endpoints.rst.txt  quickstart.rst.txt  response_formats.rst.txt  responses.rst.txt  tutorials.rst.txt
_sources/search-api-user-guide/: conventions.rst.txt  cookbook.rst.txt  endpoints.rst.txt  index.rst.txt  tutorials.rst.txt
_sources/specifications/: registry-v1.0.0.rst.txt  search-v0.4.1.rst.txt  search-v1.0.0-SNAPSHOT.rst.txt
_sources/support/: contact.rst.txt  contribute.rst.txt  help.rst.txt
_static/: documentation_options.js  theme_overrides.css
docs/requirements/0.4.0/: REQUIREMENTS.md
docs/requirements/v1.2.0-dev/: REQUIREMENTS.md
docs/requirements/v12.0.1-dev/: REQUIREMENTS.md
docs/requirements/v13.1.0-dev/: REQUIREMENTS.md
docs/requirements/v14.0.0/: REQUIREMENTS.md
docs/requirements/v14.1.0-dev/: REQUIREMENTS.md
docs/source/: acknowlegements.rst  conf.py  cookbook.rst  general-conventions.rst  implementations.rst  index.rst  overview.rst  search-api-user-guide.rst  specifications.rst  tools.rst
docs/source/cookbook/: doi.rst
docs/source/guides/: search.rst
docs/source/guides/search/: cookbook.rst  endpoints.rst  links.rst  quickstart.rst  response_formats.rst  tutorials.rst
docs/source/search/: cookbook.rst  endpoints.rst
docs/source/search-api-user-guide/: conventions.rst  cookbook.rst  endpoints.rst  introduction.rst  quickstart.rst  response_formats.rst  tutorials.rst
docs/source/search-api-user-guide/cookbook/: doi.rst
docs/source/specifications/: doi-v0.2.rst  registry-v1.0.0-SNAPSHOT.rst
docs/source/support/: contact.rst  contribute.rst  discussions.rst
docs/spec/: README.md  header.tex  pds-api-specification.md  response_formats.md
dynamic-html/docs/: index.html
dynamic-html/docs/models/: Capabilities.html  Capability.html  Collection.html  Collections.html  ErrorMessage.html  Metadata.html  PDS4Label.html  Route.html  Routes.html
dynamic-html/docs/operations/: CapabilitiesApi.html  CollectionsApi.html  ProductsApi.html  RoutesApi.html
guides/: search.html
guides/search/: cookbook.html  endpoints.html  links.html  quickstart.html  response_formats.html  responses.html  tutorials.html
html/: index.html
html2/: index.html
json-unresolved/: PDS_APIs-registry-1.0.0-SNAPSHOT-swagger.json  swagger.json
search-api-user-guide/: conventions.html  cookbook.html  endpoints.html  index.html  introduction.html  pds-api-specification.html  quickstart.html  response_formats.html  tutorials.html
search-api-user-guide/cookbook/: doi.html
specifications/: doi-v0.2-redoc.html  search-v0.4.1-redoc.html  search-v1.0.0-SNAPSHOT-redoc.html  search-v1.0.0-redoc.html  search-v1.1.0-SNAPSHOT-redoc.html  search-v1.1.0-redoc.html  search-v1.1.1-redoc.html  search-v1.3.0-redoc.html  search-v1.4.0-redoc.html  search-v1.5.0-redoc.html  search-v1.6.0-redoc.html
specs/: PDS_APIs-doi-0.2-swagger.yaml  PDS_APIs-registry-1.0.0-SNAPSHOT-swagger.yaml  PDS_APIs-search-0.4.1-swagger.yaml  PDS_APIs-search-1.0.0-SNAPSHOT-swagger.yaml  PDS_APIs-search-1.0.0-swagger.yaml  PDS_APIs-search-1.1.0-SNAPSHOT-swagger.yaml  PDS_APIs-search-1.1.0-swagger.yaml  PDS_APIs-search-1.1.1-swagger.yaml  PDS_APIs-search-1.3.0-swagger.yaml  PDS_APIs-search-1.4.0-swagger.yaml  PDS_APIs-search-1.5.0-swagger.yaml  PDS_APIs-search-1.6.0-swagger.yaml  swagger.yaml
src/api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/pds/: __init__.py
src/pds/api/: __init__.py
src/pds_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
support/: contact.html  contribute.html  discussions.html  help.html
